# subcog

./: .auto-claude-status  .claude_settings.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .trivy.yaml  .trivyignore  CHANGELOG.md  CI_VERIFICATION_REPORT.md  CLAUDE.md  CODEOWNERS  CONSOLIDATION_BENCHMARK.md  CONSOLIDATION_TESTS_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OLLAMA_CONSOLIDATION_TESTS.md  OPENAI_CONSOLIDATION_TESTS.md  README.md  RESEARCH_REPORT.md  SECURITY.md  clippy.toml  deny.toml  example.config.toml  justfile  lefthook.yml  rustfmt.toml  subcog.mcp.json  test-tombstone-integration.sh  test-verification-3.3.md
.claude/: adr.local.md  hooks.json  ralph-loop.local.md
.claude-plugin/: plugin.json  subcog.mcp.json
.claude/agents/: code-reviewer.md  rust-developer.md  test-engineer.md
.claude/commands/: run-tests.md  spec-orchestrator.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  dependabot-automerge.yml  deploy-docs.yml  docker.yml  docs.yml  release-automation.yml  release-tag.yml  release.yml  security.yml
benches/: consolidation.rs  consolidation.rs.disabled  embedding.rs  graph_rag.rs  query_parser.rs  search.rs  search_intent.rs
commands/: capture.md  integrate.md  namespaces.md  prompts.md  recall.md  run-tests.md  status.md  sync.md
docker/: README.md  docker-compose.observability.yml
docker/dashboards/: subcog-llm-storage.json  subcog-logs.json  subcog-mcp-hooks.json  subcog-overview.json  subcog-traces.json
docker/grafana/: Dockerfile
docker/loki/: loki.yml
docker/otel-collector/: Dockerfile  otelcol-config.yaml
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docker/subcog/: Dockerfile
docker/tempo/: tempo.yml
docs/: BENCHMARKS.md  CODE_REVIEW_REPORT.md  DEVELOPMENT_PLAN.md  FEATURES_REPORT.md  GROUP-MANAGEMENT.md  INSTALLATION.md  PERFORMANCE.md  QUERY_SYNTAX.md  QUICKSTART.md  README.md  RESEARCH_PLAN.md  SUBCOG_SYSTEM_CODEX_CLAUDE_PARITY.md  TROUBLESHOOTING.md  URN-GUIDE.md  environment-variables.md  hook-driven-test-architecture.md  market_analysis.md
docs/adrs/: README.md  adr_0001.md  adr_0002.md  adr_0003.md  adr_0004.md  adr_0005.md  adr_0006.md  adr_0007.md  adr_0008.md  adr_0009.md  adr_0010.md  adr_0011.md  adr_0012.md  adr_0013.md  adr_0014.md  adr_0015.md  adr_0016.md  adr_0017.md  adr_0018.md  adr_0019.md  adr_0020.md  adr_0021.md  adr_0022.md  adr_0023.md  adr_0024.md  adr_0025.md  adr_0026.md  adr_0027.md  adr_0028.md  adr_0029.md  adr_0030.md  adr_0031.md  adr_0032.md  adr_0033.md  adr_0034.md  adr_0035.md  adr_0036.md  adr_0037.md  adr_0038.md  adr_0039.md  (+22 more)
docs/architecture/: MCP-CONSOLIDATION-PLAN.md  README.md  models.md  overview.md  search.md  security.md  services.md
docs/cli/: README.md  capture.md  config.md  consolidate.md  gc.md  hook.md  namespaces.md  prompt.md  recall.md  serve.md  status.md  sync.md
docs/compliance/: ACCESS_CONTROL_POLICY.md  BACKUP_RECOVERY.md  CHANGE_CONTROL.md  DATA_RETENTION.md  DEPLOYMENT_PLAN.md  INCIDENT_RESPONSE.md  INPUT_VALIDATION.md  KEY_MANAGEMENT.md  MONITORING_ALERTING.md  README.md  SECURITY_AWARENESS.md  SESSION_MANAGEMENT.md  VENDOR_MANAGEMENT.md  VULNERABILITY_MANAGEMENT.md
docs/configuration/: README.md  config-file.md  environment.md  features.md  locations.md
docs/context-templates/: README.md
docs/hooks/: README.md  post-tool-use.md  pre-compact.md  search-intent.md  session-start.md  stop.md  user-prompt-submit.md
docs/integration/: CLAUDE.md.snippet  README.md  claude-code-setup.md  copilot-setup.md  gemini-setup.md  openai-setup.md  opencode-setup.md
docs/integrations/: AGENTS.md  README.md  opencode-subcog-agent.md
docs/mcp/: README.md  prompts.md  protocol.md  resources.md  tools.md
docs/observability/: README.md  event-bus.md  logging.md  metrics.md  otlp.md  tracing.md
docs/prompts/: README.md  SYSTEM_PROMPTS.md  formats.md  mcp.md  overview.md  storage.md  variables.md
docs/research/: BENCHMARKS.md  issue-43-storage-architecture-research.md
docs/storage/: README.md  domains.md  index.md  persistence.md  vector.md
hooks/: hooks.json  test-wrapper.sh
npm/: .gitignore  .npmignore  README.md  SECURITY.md  package.json
npm/scripts/: postinstall.js  preuninstall.js  sync-version.js
scripts/: e2e-metrics-test.sh  e2e-test.config.toml  test-mcp.sh  test_entity_extraction.sh
skills/memory-capture/: SKILL.md
skills/memory-recall/: SKILL.md
skills/subcog-integrator/: SKILL.md
skills/test-runner/: SKILL.md
src/: lib.rs  main.rs
src/cli/: capture.rs  config.rs  consolidate.rs  delete.rs  gc.rs  hook.rs  llm_factory.rs  migrate.rs  mod.rs  namespaces.rs  prompt.rs  recall.rs  serve.rs  status.rs  sync.rs  webhook.rs
src/commands/: config.rs  core.rs  enrich.rs  gc.rs  graph.rs  hook.rs  io.rs  migrate.rs  mod.rs  prompt.rs  webhook.rs
src/config/: features.rs  mod.rs  org.rs
src/context/: detector.rs  mod.rs
src/embedding/: bulkhead.rs  fallback.rs  fastembed.rs  mod.rs
src/gc/: branch.rs  expiration.rs  mod.rs  retention.rs
src/git/: mod.rs  notes.rs  parser.rs  remote.rs
src/hooks/: mod.rs  post_tool_use.rs  pre_compact.rs  search_context.rs  search_intent.rs  search_patterns.rs  session_start.rs  stop.rs  user_prompt.rs
src/io/: mod.rs  traits.rs  validation.rs
src/llm/: anthropic.rs  bulkhead.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  resilience.rs  system_prompt.rs
src/mcp/: auth.rs  dispatch.rs  help_content.rs  mod.rs  prompt_understanding.rs  prompts.rs  resources.rs  server.rs  session.rs  tool_types.rs  tools.rs
src/models/: capture.rs  consolidation.rs  domain.rs  (+10 more)
tests/: capture_integration.rs  capture_recall_integration.rs  chaos_tests.rs  fuzz_tests.rs  golden_tests.rs  graph_integration.rs  hooks_edge_cases.rs  integration_test.rs  llm_integration.rs  mcp_e2e.rs  postgresql_integration.rs  property_tests.rs  redis_integration.rs
(+298 files in other folders)
