[package]
name = "subcog"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A persistent memory system for AI coding assistants"
license = "MIT"
authors = ["zircote"]
repository = "https://github.com/zircote/subcog"
homepage = "https://github.com/zircote/subcog"
documentation = "https://docs.rs/subcog"
readme = "README.md"
keywords = ["memory", "ai", "mcp", "claude", "semantic-search"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "subcog"
path = "src/lib.rs"

[[bin]]
name = "subcog"
path = "src/main.rs"

[dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"

# Async runtime (uncomment if needed)
# tokio = { version = "1.0", features = ["full"] }

# Serialization (uncomment if needed)
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

# Logging (uncomment if needed)
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
proptest = "1.5"
test-case = "3.3"

# Async testing (uncomment if using tokio)
# tokio-test = "0.4"

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Enable additional warnings
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = "warn"

[lints.clippy]
# Deny all warnings in CI
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-module)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[features]
default = []
# Add feature flags here
# full = ["feature1", "feature2"]
