[package]
name = "subcog"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A persistent memory system for AI coding assistants"
license = "MIT"
authors = ["zircote"]
repository = "https://github.com/zircote/subcog"
homepage = "https://github.com/zircote/subcog"
documentation = "https://docs.rs/subcog"
readme = "README.md"
keywords = ["memory", "ai", "mcp", "claude", "semantic-search"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "subcog"
path = "src/lib.rs"

[[bin]]
name = "subcog"
path = "src/main.rs"

[dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Git operations (vendored for cross-platform builds)
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }

# SQLite for FTS5 index
rusqlite = { version = "0.32", features = ["bundled", "modern-full"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "v7"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for pattern matching
regex = "1.11"
once_cell = "1.20"

# HTTP client for LLM APIs (using rustls instead of native-tls to avoid openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Directories for config/data paths
directories = "6.0"

# Environment variables
dotenvy = "0.15"

# Redis client (optional)
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"], optional = true }

# PostgreSQL client (optional)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }

[dev-dependencies]
# Testing
proptest = "1.5"
test-case = "3.3"
tempfile = "3.14"

# Async testing
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "search_intent"
harness = false

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Enable additional warnings
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = "warn"

[lints.clippy]
# Deny all warnings in CI
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# todo = "deny"  # Allow during initial development
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-module)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[features]
default = []
# Optional backend features
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
redis = ["dep:redis"]
# All features enabled
full = ["postgres", "redis"]
