[package]
name = "subcog"
version = "0.14.7"
edition = "2024"
rust-version = "1.88"
description = "A persistent memory system for AI coding assistants"
license = "MIT"
authors = ["zircote"]
repository = "https://github.com/zircote/subcog"
homepage = "https://github.com/zircote/subcog"
documentation = "https://docs.rs/subcog"
readme = "README.md"
keywords = ["memory", "ai", "mcp", "semantic-search", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "subcog"
path = "src/lib.rs"

[[bin]]
name = "subcog"
path = "src/main.rs"

[dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.9"
csv = "1.3"

# Parquet support (optional)
arrow = { version = "57", optional = true, default-features = false }
parquet = { version = "57", optional = true, default-features = false, features = ["arrow"] }
rmcp = { version = "0.14.0", features = ["transport-io", "transport-streamable-http-server"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "logs", "http-proto", "reqwest-blocking-client", "grpc-tonic"] }
opentelemetry-appender-tracing = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Git operations (vendored for cross-platform builds)
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }

# SQLite for FTS5 index
rusqlite = { version = "0.38", features = ["bundled", "modern-full"] }

# UUID generation
uuid = { version = "1.20", features = ["v4", "v7"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for pattern matching
regex = "1.12"
once_cell = "1.20"

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Secret management with zeroization
secrecy = { version = "0.10", features = ["serde"] }

# Encryption at rest (optional)
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

# LRU cache for recent capture tracking
lru = "0.16"

# FastEmbed for semantic embeddings (optional - fallback to pseudo-embeddings if not available)
# Use rustls instead of native-tls (openssl) for TLS
fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }

# usearch HNSW vector search (optional - pure Rust fallback if not available)
usearch = { version = "2.24", optional = true }

# HTTP client for LLM APIs (using rustls instead of native-tls to avoid openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# JWT authentication for MCP HTTP transport
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# HTTP server for MCP HTTP transport (optional)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"], optional = true }

# Directories for config/data paths
directories = "6.0"

# Environment variables
dotenvy = "0.15"

# Redis client (optional)
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

# PostgreSQL client (optional)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1.0", optional = true }
hmac = "0.12.1"
ctrlc = "3.5.2"

[dev-dependencies]
# Testing
proptest = "1.10"
test-case = "3.3"
tempfile = "3.25"
tower = "0.5"

# Async testing
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "search_intent"
harness = false

[[bench]]
name = "embedding"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "query_parser"
harness = false

[[bench]]
name = "graph_rag"
harness = false

# TEMPORARILY DISABLED: consolidation benchmark needs API updates
# [[bench]]
# name = "consolidation"
# harness = false

[profile.dev]
# Faster compile times during development
debug = 1
opt-level = 0

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Enable additional warnings
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = "warn"

[lints.clippy]
# Deny all warnings in CI
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# todo = "deny"  # Allow during initial development
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Allow in certain contexts (can be overridden per-module)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[features]
default = []
# Optional backend features
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
postgres-tls = ["postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots"]
redis = ["dep:redis"]
# usearch HNSW vector search (native implementation)
usearch-hnsw = ["dep:usearch"]
# FastEmbed semantic embeddings (ONNX-based)
fastembed-embeddings = ["dep:fastembed"]
# HTTP transport with JWT authentication
http = ["dep:axum", "dep:tower-http"]
# Encryption at rest for filesystem backend (AES-256-GCM)
encryption = ["dep:aes-gcm", "dep:rand", "dep:base64"]
# Organization-scoped storage (requires PostgreSQL, optionally Redis)
# Feature-gated stub for future implementation
org-scope = []
# Group-scoped shared memory graphs (requires org-scope)
# Enables team collaboration through shared memory groups within an organization
group-scope = ["org-scope"]
# Parquet export format support (Apache Arrow columnar)
parquet-export = ["dep:arrow", "dep:parquet"]
# All features enabled
full = ["postgres", "postgres-tls", "redis", "usearch-hnsw", "fastembed-embeddings", "http", "encryption", "parquet-export"]
